# AnkiKindle

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yaml
kindle_scripts/: browser  install_browser.sh  kill.sh  launch.sh  menu.json  restore_browser.sh
src/: main.rs
web/: index.html
