[package]
name = "anki-kindle"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.80"
license = "AGPL-3.0-or-later"

[dependencies]
anki = { git = "https://github.com/ankitects/anki.git", tag = "25.09.2" }
anki_proto = { git = "https://github.com/ankitects/anki.git", tag = "25.09.2" }
axum = { version = "0.8.4", features = ["multipart", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.45", features = ["fs", "rt-multi-thread", "macros", "signal", "io-util"] }
tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
mime_guess = "2"
regex = "1"

[[bin]]
name = "anki-kindle"
path = "src/main.rs"
